FEAT: add ingredient quantity (refactor step).